2001-08-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* uctools.h: brought up-to-date to the rest of exult
	* ucinternal.*: risky usecode changes to (hopefully) fix conversations.

2001-08-07  Tristan Tarrant <nadir@users.sourceforge.net>
	* server/objserial.h: add an #include <string>
	* imagewin/scale.cc: copyright of 2xSaI is GPL

2001-08-07  Max Horn <max@quendi.de>
	* bggame.cc: butterfly & "static" are now steered via proper timers, thus should
	  have the same speed regardless of your scaler and the speed of your machine

2001-08-07  Max Horn <max@quendi.de>
	* ibuf16.cc: needed to include cstdlib but didn't
	* autoarray.h: needed to include exult_types.h but didn't
	* bggame.cc: added #include <memory>; fixed butterfly path for higher resolutions

2001-08-07  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/barge.cc (Barge_object): Don't rotate ice raft.
	* objs/objs.cc: Much simpler ::get_rotated_frame().
	* usecode/ucsched.cc (Scheduled_usecode): Opcode 0x21 = 'nop'.

2001-08-07  Max Horn <max@quendi.de>
	* audio/Audio.h/.cc: added is_track_playing method; also fixed speech on MacOS
	  (my first speech bug fix was breaking the second, real fix)
	* audio/Midi.h: added is_track_playing method
	* bggame.cc: loads of changes, intro should be much better now, and better structured;
	  this is work in progess, not yet finished
	* exceptions.h: added UserBreakException
	* imagewin/imagebuf.cc/.h, ibuf8.cc/.h, ibu16.cc/.h: added fill_static method
	* game.cc: fixed wait_delay() to recognize very quick clicks (that measn very short
	  delay between mouse down and mouse up)
	* game.h: factored out BG_Game && SI_Game class declarations into new headers
	* added bggame.h, sigame.h
	* mac/*: added legal header to some files
	* sigame.cc; cleaned up intro code a little bit
	* various files: updated legal headers

2001-08-06  Max Horn <max@quendi.de>
	* audio/Audio.cc: fixed the fix for MacOS speech output
